Fixed errors, typos, syntax errors, missing imports, wrong method calls